# pwhw8

./: .gitignore  pyproject.toml
part_1_mongo/: connect.py  insert.py  models.py  search.py
part_2_rabbit/: consumer.py  producer.py  seeds.py
part_2_rabbit/src/: connect_mongodb.py  connect_rabbitmq.py  models.py
