[tool.poetry]
name = "pw81-"
version = "0.1.0"
description = ""
authors = ["STsapko <stsapko@gmail.com>"]
readme = "README.md"
packages = [{include = "pw81_"}]

[tool.poetry.dependencies]
python = "^3.11"
mongoengine = "^0.27.0"
pymongo = "^4.4.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
